# marketplace

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml  setup.cfg
src/app/: service.py
src/app/api/advertisements/: controller.py  models.py
src/app/api/users/: controller.py  models.py
src/app/data_sources/: adaptor.py
src/app/data_sources/dtos/: advertisement.py  user.py
src/app/data_sources/models/: __init__.py  advertisement.py  base.py  user.py
src/app/data_sources/storages/: advertisement_storage.py  user_storage.py
src/app/migrations/: env.py
src/app/migrations/versions/: 00001_initial.py  00002_add_admin.py
src/app/users/: access_token.py  auth.py
src/config/: config.py  config.yml
